--- a/Workshop/GitHub-Sandbox/form.html
+++ b/Workshop/GitHub-Sandbox/form.html
@@ -36,10 +36,13 @@
   <form action="index.html" method="POST" target="_blank">
     <h1>This Is A Complete Form</h1>
     <!----- Search Input ----->
-    <label for="search">
-      <input type="search" name="search" id="search">
-      <input type="image" id="search" src="submit.jpg">
-    </label>
+    <fieldset style="width: 20%; margin: auto;">
+      <legend>Search</legend>
+      <label for="search">
+        <input type="search" name="search" id="search">
+        <input type="image" id="search" src="submit.jpg">
+      </label>
+    </fieldset>
     <br>
     <!----- Username Input ----->
     <label>Username: <input type="text" name="username" placeholder="Enter Your Username" minlength="4" maxlength="10" pattern="[a-zA-Z0-9]+" required></label>
@@ -58,6 +61,7 @@
     <br>
     <label>Confirm Password: <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Your Password" minlength="6" maxlength="20" onkeyup="check();" required></label>
     <span id='message'></span>
+    <br>
     <br>
     <!----- Radio Input ----->
     <fieldset style="width: 40%; margin: auto;">
