--- a/Workshop/JavaScript-Sandbox/Persian-Tutorials/persianTutorial-1.html
+++ b/Workshop/JavaScript-Sandbox/Persian-Tutorials/persianTutorial-1.html
@@ -10,7 +10,7 @@
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, nam, aliquid cum quaerat vel nulla expedita ducimus corrupti quidem illo aliquam ipsum aut perspiciatis magni hic fuga reprehenderit, sequi nobis!
 
    <script>
-    alert('Hello World');
+    src="persianTutorial-1.js"
    </script>
 
 </body>
