--- a/Workshop/JavaScript-Sandbox/Persian-Tutorials/persianTutorial-1.html
+++ b/Workshop/JavaScript-Sandbox/Persian-Tutorials/persianTutorial-1.html
@@ -7,7 +7,7 @@
   <title>JS Course 1</title>
 </head>
 <body>
-   Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, nam, aliquid cum quaerat vel nulla expedita ducimus corrupti quidem illo aliquam ipsum aut perspiciatis magni hic fuga reprehenderit, sequi nobis!
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, nam, aliquid cum quaerat vel nulla expedita ducimus corrupti quidem illo aliquam ipsum aut perspiciatis magni hic fuga reprehenderit, sequi nobis!</p>
 
    <script>
     src="persianTutorial-1.js"
